# oslib

./: .cppcheck-suppress  .gitignore  .travis.yml  .uncrustifyignore  CHANGELOG.TXT  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.TXT  README.md  VirtualFile.h  _virtual_file_8h.html  _virtual_file_8h.js  annotated.html  annotated_dup.js  audio.h  audio_8h.html  audio_8h.js  browser.c  browser.h  ccc_8h.html  ccc_8h.js  classes.html  deprecated.html  dialog.c  dialog.h  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.js  dir_556e112776ee723126c26b6103a4b758.html  dir_556e112776ee723126c26b6103a4b758.js  dir_579f129c4fb1f2609d7e9c48cabe6d2a.html  dir_579f129c4fb1f2609d7e9c48cabe6d2a.js  dir_c126e59f6e731628d61946a0bf4ee519.html  dir_c126e59f6e731628d61946a0bf4ee519.js  dir_ca75e62787af7971a17ec005ce82904a.html  dir_dac61e6b20f302163e26bb52b968793b.html  dir_dac61e6b20f302163e26bb52b968793b.js  dir_f8d52f1700c137b39b84f15c83fd4eee.html  dir_f8d52f1700c137b39b84f15c83fd4eee.js  (+233 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Build.yml
Doc/: mainpage.txt
Platform/: PSP.cmake
Special/: oslLoadImageFile.c  oslLoadImageFileGIF.c  oslLoadImageFileJPG.c  oslLoadImageFilePNG.c  oslWriteImageFile.c  oslWriteImageFilePNG.c
adhoc/: pspadhoc.c  pspadhoc.h
audio/: audio.c  media.c
image/: oslDrawImage.c  oslDrawImageBig.c  oslScaleImage.c  oslUnswizzleImage.c
intraFont/: intraFont.c  intraFont.h  libccc.c  libccc.h
jpeg/: gba-jpeg-decode.c  gba-jpeg-decode.h  gba-jpeg.h
samples/: README.TXT
samples/OSK/: main.c  makefile
samples/adhoc/: main.c  makefile
samples/dialog/: main.c  makefile
samples/helloWorld/: main.c  makefile
samples/internetBrowser/: exception.c  exception.h  main.c  makefile
samples/intraFont/: main.c  makefile
samples/map/: main.c  makefile  maps.h
samples/map/Resources/: music.bgm
samples/net/: main.c  makefile
samples/rectAndFonts/: main.c  makefile
samples/saveAndLoad/: icon.h  main.c  makefile
samples/sfont/: main.c  makefile
samples/shapes/: main.c  makefile
splash/: oslShowSplashScreen2.c
src/: VirtualFile.h  audio.h  bgm.h  browser.c  browser.h  ccc.h  dialog.c  dialog.h  drawing.c  drawing.h  emu.c  emu.h  image.c  keys.c  keys.h  map.c  map.h  messagebox.c  messagebox.h  net.c  net.h  osk.c  osk.h  oslHandleLoadNoFailError.c  oslib.c  oslib.h  oslmath.h  palette.c  readwav.h  saveload.c  saveload.h  sfont.c  sfont.h  shape.c  text.c  text.h  usb.c  usb.h  vfpu.c  vfpu.h  (+3 more)
src/Doc/: mainpage.txt
src/Special/: oslLoadImageFile.c  oslLoadImageFileGIF.c  oslLoadImageFileJPG.c  oslLoadImageFilePNG.c  oslWriteImageFile.c  oslWriteImageFilePNG.c
src/adhoc/: pspadhoc.c  pspadhoc.h
src/audio/: audio.c  bgm.c  media.c  mod.c
src/image/: oslConvertImageTo.c  oslDrawImage.c  oslDrawImageBig.c  oslDrawImageSimple.c  oslGetImagePixel.c  oslLockImage.c  oslMoveImageTo.c  oslResetImageProperties.c  oslScaleImage.c  oslSetDrawBuffer.c  oslSetImagePixel.c  oslSwizzleImage.c  oslUnswizzleImage.c
src/mem/: oslGetRamStatus.c
src/splash/: oslShowSplashScreen1.c  oslShowSplashScreen2.c
src/vfile/: VirtualFile.c  vfsFile.c
tools/src/font2osl/: font.dsp  font.dsw  main.cpp  xAPI.cpp  xAPI.h
tools/src/wav2bgm/: ima.c  ima.dsp  ima.dsw  readwav.c  readwav.h
travis/: travis-build.sh
vfile/: VirtualFile.c
